--- a/assets/stylish/components/_block.scss
+++ b/assets/stylish/components/_block.scss
@@ -3,21 +3,21 @@
 
 
 .block{
-  @include move($block_move, $block_small, $block_large);
-  @include move_in($block_move_in, $block_small, $block_large);
+  @include move($block_move_bottom, $block_move_top, $block_small, $block_large);
+  @include move_in($block_move_in_bottom, $block_move_in_top, $block_small, $block_large);
   @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
 
 
   .b_title{
     position: relative;
-    @include move($block_b_title_move, $block_small, $block_large);
-    @include move_in($block_b_title_move_in, $block_small, $block_large);
+    @include move($block_b_title_move_bottom, $block_b_title_move_top, $block_small, $block_large);
+    @include move_in($block_b_title_move_in_bottom, $block_b_title_move_in_top, $block_small, $block_large);
     @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
 
     .title{
       position: relative;
-      @include move($block_title_move, $block_small, $block_large);
-      @include move_in($block_title_move_in, $block_small, $block_large);
+      @include move($block_title_move_bottom, $block_title_move_top, $block_small, $block_large);
+      @include move_in($block_title_move_in_bottom, $block_title_move_in_top, $block_small, $block_large);
       @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
     }
     .subtitle{ }
