--- a/assets/stylish/global/_forms.scss
+++ b/assets/stylish/global/_forms.scss
@@ -4,7 +4,7 @@
 
 @include form_fields{
 
-  @include input_style($input_txt_color, $input_bg_color, $input_border_width, $input_border_style, $input_border_color, $input_margin, $input_width, $input_font_family, $input_radius);
+  @include input_style($input_txt_color, $input_bg_color, $input_border_width, $input_border_style, $input_border_color, $input_margin, $input_width, $input_font_family, $input_radius, $input_weight);
   @include appearance(none);
   @include font-smoothing();
 
@@ -130,34 +130,6 @@ textarea{ height: 150px; }
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-//Input Big size
-.input_big{
-  @include form_fields{
-    @include input_size($input_height_large, $input_txt_size_large, $input_line_height_large, $input_padding_v_large, $input_padding_h_large);
-  }
-  .select   { @include select_size($input_height_large, $select_icon_size_large); }
-  .checkbox { @include checkbox_size($checkbox_height_large, $checkbox_icon_size_large); }
-  .radio    { @include radio_size($radio_height_large, $radio_icon_size_large); }
-}
-
-//Input small size
-.input_small{
-  @include form_fields{
-    @include input_size($input_height_small, $input_txt_size_small, $input_line_height_small, $input_padding_v_small, $input_padding_h_small);
-  }
-  .select   { @include select_size($input_height_small, $select_icon_size_small); }
-  .checkbox { @include checkbox_size($checkbox_height_small, $checkbox_icon_size_small);}
-  .radio    { @include radio_size($radio_height_small, $radio_icon_size_small);}
-
-
-
-}
-
-
-
-/* ---------------------------------------------------------------------------------------------------------------------------------- */
-
-
 /* Setup forms layout */
 form, .form{
   .field{
@@ -191,8 +163,33 @@ form, .form{
   .label_correction{padding-top: 5px}
 
   //validation error (validation-advice for magento)
-  .validation-advice, .error{
+  .validation-advice,
+  .error{
     color: $form_error; @include font_style(14px); margin-top: $form_error_move;
     &:before{@extend .sy_icon; @extend .sy_remove_round:before; padding-right: 10px; vertical-align: bottom}
   }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Input Big size
+.input_big{
+  @include form_fields{
+    @include input_size($input_height_large, $input_txt_size_large, $input_line_height_large, $input_padding_v_large, $input_padding_h_large);
+  }
+  .select   { @include select_size($input_height_large, $select_icon_size_large); }
+  .checkbox { @include checkbox_size($checkbox_height_large, $checkbox_icon_size_large); }
+  .radio    { @include radio_size($radio_height_large, $radio_icon_size_large); }
+}
+
+//Input small size
+.input_small{
+  @include form_fields{
+    @include input_size($input_height_small, $input_txt_size_small, $input_line_height_small, $input_padding_v_small, $input_padding_h_small);
+  }
+  .select   { @include select_size($input_height_small, $select_icon_size_small); }
+  .checkbox { @include checkbox_size($checkbox_height_small, $checkbox_icon_size_small);}
+  .radio    { @include radio_size($radio_height_small, $radio_icon_size_small);}
 }
