--- a/assets/stylish/global/_variables.scss
+++ b/assets/stylish/global/_variables.scss
@@ -365,6 +365,8 @@ $block_border_color:          $color_mine_shaft;
 $block_small:                 2; //Divide by this number
 $block_large:                 2; //Multiply by this number
 
+$btn_set_btn_move:     10px;
+
 
 // ---------------------------------------- //
 //Breadcrumbs
