--- a/assets/stylish/layout/_content.scss
+++ b/assets/stylish/layout/_content.scss
@@ -2,5 +2,5 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-#content{min-height: 500px; margin-bottom: 50px;}
+#content{min-height: 500px;}
 
